tests/fsharp/typecheck/sigs/neg86.bsl

neg86.fsx(18,20,18,22): parse error FS3156: Unexpected token 'in' or incomplete expression
